FIR IDE: add basic project performance test